# Efficio

./: .gitignore  CMakeLists.txt  Console.cpp  Efficio.md  Efficio.sln  README.md  default.doxygen
Core/: AJDBody.h  AJDEngine.cpp  AJDEngine.h  AJDFrame.cpp  CMakeLists.txt  Core.vcxitems  DebuggingNotes.txt  Efficio.Core.vcxproj  Efficio.Core.vcxproj.filters  Efficio.sln  EfficioFinger.h  EfficioFrame.cpp  EfficioFrame.h  EfficioHand.h  Enumerations.h  FingerJoint.cpp  FingerJoint.h  HandJoint.h  ReadMe.txt  Test.cpp  Test.h
Core/CPP/: Altimeter.h  Altitude.h  Arm.h  Asset.h  AssetManager.cpp  AssetManager.h  Body.h  BodySide.h  Bone.h  Bone2.cpp  Bone2.h  ContinuousGesture.cpp  ContinuousGesture.h  Data.h  DataType.h  Datum.h  DatumType.h  Device.cpp  Device.h  DeviceConfiguration.cpp  DeviceConfiguration.h  DeviceManager.cpp  DeviceManager.h  DeviceStatus.h  DiscreteGesture.cpp  DiscreteGesture.h  Documentation.h  Documentation_mdimmmaps.txt  DownstreamConverter.cpp  Drone.cpp  Drone.h  Efficio.aps  Efficio.i  Efficio.sln  Efficio.vcxproj  Efficio.vcxproj.filters  EfficioFinger.cpp  EfficioFinger.h  EfficioFrame.cpp  EfficioFrame.h  (+82 more)
Core/CPP/Debug/: vc140.idb
Core/CPP/Debug/Efficio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Efficio.lastbuildstate  Efficio.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Core/CPP/TestCPPProject/: ReadMe.txt  TestCPPProject.cpp  TestCPPProject.vcxproj  TestCPPProject.vcxproj.filters  stdafx.cpp
Core/CPP/doc/html/: _active_gesture_dictionary_8h_source.html  _altimeter_8h_source.html  _altitude_8h_source.html  _asset_8h_source.html  _asset_manager_8h_source.html  _body_8h_source.html  _body_side_8h_source.html  _bone2_8h_source.html  _continuous_gesture_8h_source.html  _data_8h_source.html  _data_type_8h_source.html  _datum_8h_source.html  _datum_type_8h_source.html  _drone_8h_source.html  (+205 more)
Core/CSharp/: BodySide.cs  BodyTrackingType.cs  Device.cs  DeviceCollection.cs  DeviceConfiguration.cs  DeviceManager.cs  DeviceStatus.cs  DiscreteGesture.cs  Efficio.Net.csproj  Efficio.Net.sln  Efficio.cs  EfficioFrame.cs  EfficioPINVOKE.cs  EfficioRuntime.cs  EfficioRuntimePINVOKE.cs  Engine.cs  Event.cs  EventCollection.cs  EventType.cs  Finger.cs  FingerCollection.cs  FingerJointType.cs  FingerName.cs  FingerType.cs  Frame.cs  Gesture.cs  GestureState.cs  GestureType.cs  Hand.cs  HandCollection.cs  HandData.cs  HandType.cs  Joint.cs  JointCollection.cs  JointName.cs  LeapConfiguration.cs  Pinch.cs  PinchDetector.cs  PinchEvent.cs  RightHandThumbAndIndexPinch.cs  (+41 more)
Core/CSharp/TestCSharpApp/: Program.cs  TestCSharpApp.csproj
Core/CSharp2/: BodySide.cs  Device.cs  DeviceCollection.cs  DeviceConfiguration.cs  DeviceManager.cs  DeviceStatus.cs  DiscreteGesture.cs  EfficioFrame.cs  EfficioPINVOKE.cs  Engine.cs  EventCollection.cs  Finger.cs  FingerName.cs  Frame.cs  GestureCollection.cs  Hand.cs  HandCollection.cs  HandData.cs  Joint.cs  LeapConfiguration.cs  Pinch.cs  SWIGTYPE_p_std__arrayT_Efficio__Models__Human__Finger_5_t.cs  SWIGTYPE_p_std__shared_ptrT_Efficio__Models__Human__Hand_t.cs  SWIGTYPE_p_std__time_t.cs  SWIGTYPE_p_std__vectorT_Efficio__Models__Human__Hand_t.cs  TrackingType.cs  Vector3.cs
Core/Debug/: Efficio.exp  Efficio.ilk
Core/Java/: BodySide.java  BodyTrackingType.java  DataDictionary.java  DataType.java  Device.java  DeviceCollection.java  DeviceConfiguration.java  DeviceManager.java  DeviceStatus.java  DiscreteGesture.java  Efficio.java  EfficioConstants.java  EfficioFrame.java  EfficioJNI.java  EfficioRuntime.java  EfficioRuntimeJNI.java  Engine.java  Event.java  EventCollection.java  EventType.java  Finger.java  FingerCollection.java  FingerJointType.java  FingerName.java  FingerType.java  Frame.java  Gesture.java  GestureCollection.java  GestureState.java  GestureType.java  Hand.java  HandCollection.java  HandData.java  HandType.java  Joint.java  JointCollection.java  JointName.java  JointType.java  LeapConfiguration.java  Pinch.java  (+64 more)
Core/docs/: default.doxygen
Core/include/: Asset.h  Connected.h  Connecting.h  ContinuousEvent.h  Data.h  Disconnected.h  Disconnecting.h  DiscreteEvent.h  Event.h  Faulted.h  Frame.h  IRecognitionProcessor.h  Sensor.h  SensorEvent.h  SensorInformation.h  SensorStatus.h  Vector2.h  Vector3.h  Vector4.h
Core/resources/: default.doxygen
Core/src/: Altitude.h  Arm.h  Asset.cpp  Body.h  BodySide.h  Bone.cpp  Bone.h  BoneTypes.h  ButtonType.h  Connected.cpp  Connected.h  Connecting.cpp  Connecting.h  ContinuousGesture.cpp  ContinuousGesture.h  Data.h  DataType.h  Disconnected.cpp  Disconnected.h  Disconnecting.cpp  Disconnecting.h  DiscreteEvent.cpp  DiscreteGesture.cpp  DiscreteGesture.h  EfficioStarted.h  EmptyData.h  Engine.cpp  Engine.h  Event.cpp  Event.h  EventType.h  Expressions.h  Face.h  FaceData.h  Faulted.cpp  Faulted.h  Finger.cpp  Finger.h  FingerType.h  Frame.cpp  (+46 more)
Plugins/Assets/Intel/: CMakeLists.txt
Plugins/Assets/Leap/: CMakeLists.txt
Plugins/Models/AudioVisual/: CMakeLists.txt
Plugins/Models/Body/: CMakeLists.txt
Plugins/Models/Spatial/: CMakeLists.txt
Plugins/RecognitionProcessors/Body/: CMakeLists.txt
Runtime/: CMakeLists.txt  Efficio.Runtime.vcxproj  Efficio.Runtime.vcxproj.filters  README.md
Runtime/EfficioRuntime.Experimentation/: EfficioRuntime.Experimentation.cpp  EfficioRuntime.Experimentation.vcxproj  EfficioRuntime.Experimentation.vcxproj.filters  ReadMe.txt  stdafx.cpp
Runtime/EfficioRuntime.Experimentation/Debug/: EfficioRuntime.Experimentation.vcxprojResolveAssemblyReference.cache
Runtime/docs/: default.doxygen
Runtime/include/: AssetManager.h  EfficioStarted.h  Engine.h  HistoricalFrameCollection.h  InputRecognitionEngine.h  Message.h  MessageBus.h  PerformanceManager.h
Runtime/resources/: Efficio.i  Enumerations.i  RuntimeCSharp.i  RuntimeJava.i
Runtime/src/: AssetManager.cpp  EfficioStarted.cpp  Engine.cpp  Engine.h  HistoricalFrameCollection.cpp  HistoricalFrameCollection.h  InputRecognitionEngine.cpp  Message.cpp  MessageBus.cpp  PerformanceManager.cpp  RuntimeCSharp_wrap.cxx  RuntimeJava_wrap.cxx
(+964 files in other folders)
